<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/fakegps_category">
        <com.cyanogenmod.settings.device.EditTextPreferenceEx
            android:key="fakegps_latitude"
            android:title="@string/fakegps_latitude"
            android:dialogTitle="@string/fakegps_latitude"
            android:hint="@string/fakegps_hint"
            android:singleLine="true"
            android:inputType="numberSigned|numberDecimal"
            android:digits="0123456789.-"
            android:defaultValue=""
            android:summary="%s"
            />
        <com.cyanogenmod.settings.device.EditTextPreferenceEx
            android:key="fakegps_longitude"
            android:title="@string/fakegps_longitude"
            android:dialogTitle="@string/fakegps_longitude"
            android:hint="@string/fakegps_hint2"
            android:singleLine="true"
            android:inputType="numberSigned|numberDecimal"
            android:digits="0123456789.-"
            android:defaultValue=""
            android:summary="%s"
            />
        <com.cyanogenmod.settings.device.EditTextPreferenceEx
            android:key="fakegps_altitude"
            android:title="@string/fakegps_altitude"
            android:dialogTitle="@string/fakegps_altitude"
            android:hint="@string/fakegps_hint2"
            android:singleLine="true"
            android:inputType="numberSigned|numberDecimal"
            android:digits="0123456789.-"
            android:defaultValue=""
            android:summary="%s"
            />
    </PreferenceCategory>
</PreferenceScreen>
